--- a/eRestaurantDemo/eRestaurantWebSite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebSite/Site.master
@@ -52,6 +52,7 @@
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">Special Events Admin</a></li>
+                         <li><a runat="server" href="~/SamplePages/ListView">List View Display</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                     </ul>
