--- a/eRestaurantDemo/eRestaurantWebSite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebSite/Site.master
@@ -52,9 +52,9 @@
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">Special Events Admin</a></li>
-                         <li><a runat="server" href="~/SamplePages/ListView">List View Display</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/SamplePages/ListView">List View Display</a></li>
+                        <li><a runat="server" href="~/SamplePages/ReservationsByDate">Reperter,Reservations By date</a></li>
+                        <li><a runat="server" href="~/SamplePages/CategoryMenuItem">CategoryMenuItem</a></li>                        
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
