--- a/eRestaurantDemo/eRestaurantWebSite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebSite/Site.master
@@ -49,12 +49,12 @@
                     <a class="navbar-brand" runat="server" href="~/">Jehan Amintha</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">Special Events Admin</a></li>
-                        <li><a runat="server" href="~/SamplePages/ListView">List View Display</a></li>
-                        <li><a runat="server" href="~/SamplePages/ReservationsByDate">Reperter,Reservations By date</a></li>
-                        <li><a runat="server" href="~/SamplePages/CategoryMenuItem">CategoryMenuItem</a></li>                        
+                    <ul class="nav navbar-nav">                        
+                        <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">SpecialEvents</a></li>
+                        <li><a runat="server" href="~/SamplePages/ListView">ListView</a></li>
+                        <li><a runat="server" href="~/SamplePages/ReservationsByDate">Reperter</a></li>
+                        <li><a runat="server" href="~/SamplePages/CategoryMenuItem">CategoryMenuItem</a></li>
+                        <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin.aspx">SpecialEventsListView</a></li>                        
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
