--- a/eRestaurantDemo/eRestaurantWebSite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebSite/Site.master
@@ -49,13 +49,13 @@
                     <a class="navbar-brand" runat="server" href="~/">Jehan Amintha</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">                        
+                   <%-- <ul class="nav navbar-nav">                        
                         <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">SpecialEvents</a></li>
                         <li><a runat="server" href="~/SamplePages/ListView">ListView</a></li>
                         <li><a runat="server" href="~/SamplePages/ReservationsByDate">Reperter</a></li>
                         <li><a runat="server" href="~/SamplePages/CategoryMenuItem">CategoryMenuItem</a></li>
                         <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin.aspx">SpecialEventsListView</a></li>                        
-                    </ul>
+                    </ul>--%>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
@@ -72,6 +72,28 @@
                             </ul>
                         </LoggedInTemplate>
                     </asp:LoginView>
+                   <%-- dropdown menue--%>
+                    <asp:Menu ID="navMenu" runat="server" 
+                    BackColor="#000000" BorderColor="Red"
+                    StaticMenuItemStyle-ForeColor="#999999" 
+                    StaticMenuItemStyle-VerticalPadding="10px"
+                    StaticMenuItemStyle-HorizontalPadding="10px"
+                    RenderingMode="List" Orientation="Horizontal" 
+                    DynamicMenuItemStyle-ForeColor="#999999" 
+                    DynamicMenuStyle-BackColor="Black">
+                    <Items>
+                        <asp:MenuItem Text="Home" NavigateUrl="~/"></asp:MenuItem>
+
+                        <asp:MenuItem Text="In Class Demos" Value="DDMenu">
+                            <asp:MenuItem Text="Special Events" NavigateUrl="~/SamplePages/SpecialEventsAdmin"></asp:MenuItem>
+                            <asp:MenuItem Text="List View" NavigateUrl="~/SamplePages/ListView"></asp:MenuItem>
+                            <asp:MenuItem Text="Reservations By Date" NavigateUrl="~/SamplePages/ReservationsByDate"></asp:MenuItem>
+                            <asp:MenuItem Text="Menu Category Item" NavigateUrl="~/SamplePages/CategoryMenuItem"></asp:MenuItem>
+                            <asp:MenuItem Text="SpecialEventsListView" NavigateUrl="~/CommandPages/SpecialEventsAdmin.aspx"></asp:MenuItem>
+                            <asp:MenuItem Text="Waiter Admin - Single Row CRUD" NavigateUrl="~/CommandPages/WaiterAdmin.aspx"></asp:MenuItem>                                                       
+                        </asp:MenuItem>                       
+                    </Items>
+                </asp:Menu>)
                 </div>
             </div>
         </div>
