--- a/eRestaurantDemo/eRestaurantWebSite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebSite/Site.master
@@ -84,13 +84,16 @@
                     <Items>
                         <asp:MenuItem Text="Home" NavigateUrl="~/"></asp:MenuItem>
 
-                        <asp:MenuItem Text="In Class Demos" Value="DDMenu">
+                        <asp:MenuItem Text="CRUD" Value="CRUD_DDMenu">
                             <asp:MenuItem Text="Special Events" NavigateUrl="~/SamplePages/SpecialEventsAdmin"></asp:MenuItem>
                             <asp:MenuItem Text="List View" NavigateUrl="~/SamplePages/ListView"></asp:MenuItem>
                             <asp:MenuItem Text="Reservations By Date" NavigateUrl="~/SamplePages/ReservationsByDate"></asp:MenuItem>
                             <asp:MenuItem Text="Menu Category Item" NavigateUrl="~/SamplePages/CategoryMenuItem"></asp:MenuItem>
                             <asp:MenuItem Text="SpecialEventsListView" NavigateUrl="~/CommandPages/SpecialEventsAdmin.aspx"></asp:MenuItem>
                             <asp:MenuItem Text="Waiter Admin - Single Row CRUD" NavigateUrl="~/CommandPages/WaiterAdmin.aspx"></asp:MenuItem>                                                       
+                        </asp:MenuItem>
+                        <asp:MenuItem Text="Reports" Value="ReportsMenu">
+                            <asp:MenuItem Text="Category Menu Items Report" NavigateUrl="~/Reports/CategoryMenuItemsReport.aspx"></asp:MenuItem>
                         </asp:MenuItem>                       
                     </Items>
                 </asp:Menu>)
