Fixed Total field in the Report
was not showing the total for a day for a waiter, and added the SUM
functoin in the Expressoin

--- a/eRestaurantDemo/eRestaurantWebSite/Reports/WaiterBilling.rdlc
+++ b/eRestaurantDemo/eRestaurantWebSite/Reports/WaiterBilling.rdlc
@@ -356,7 +356,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!BillTotal.Value</Value>
+                              <Value>=Sum(Fields!BillTotal.Value)</Value>
                               <Style>
                                 <FontFamily>Tahoma</FontFamily>
                                 <FontWeight>Normal</FontWeight>
